HTTP_Routing/2.17_HTTPURLRewrite_Hostname/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-hostname-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com


  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            hostname: tea.f5bnk.com

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
